--- a/css/styles.css
+++ b/css/styles.css
@@ -1280,7 +1280,7 @@ header .menu-icon .section-title {
     flex-direction: column;
 }
 /*SPLIDE*/
-.about-third .about-third-text .splide .splide__arrow {
+.splide .splide__arrow {
 	background: transparent;
     width: 80px;
     height: 80px;
@@ -1288,15 +1288,19 @@ header .menu-icon .section-title {
     border: 1px solid #fff;
 	padding: 2rem;
 }
-.about-third .about-third-text .splide .splide__arrow--prev {
-	left: -8em;
+.splide .splide__slide {
+	cursor: pointer;
 }
-.about-third .about-third-text .splide .splide__arrow--next {
-	right: -8em;
-}
-.about-third .about-third-text .splide .splide__arrow svg{
+.splide .splide__arrow svg{
 	width: 45px;
 }
+.splide .splide__arrow--prev {
+	left: -8em;
+}
+.splide .splide__arrow--next {
+	right: -8em;
+}
+
 .about-third .about-third-text .splide .team-pic {
 	position: relative;
 }
@@ -1340,9 +1344,6 @@ header .menu-icon .section-title {
 .about-third .about-third-text .splide .splide__slide:hover .team-more,
 .about-third .about-third-text .splide .splide__slide:hover .team-pic::before{
 	opacity: 1;	
-}
-.about-third .about-third-text .splide .splide__slide {
-	cursor: pointer;
 }
 /* ********************************** */
 /*               SERVICES             */
@@ -1559,12 +1560,13 @@ header .menu-icon .section-title {
 .team .team-text{
 	width: 100%;
 	height: 100%;
-    padding: 0 30rem;
+    padding: 0 20rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
     text-align: center;
-	row-gap: 1rem;
+	align-items: center;
+	row-gap: 4rem;
 }
 .team .team-text h1{
 	font-weight: 700;
@@ -3214,14 +3216,14 @@ header .menu-icon .section-title {
 		padding: 2rem 2rem;
 	}
 	/*SPLIDE*/
-	.about-third .about-third-text .splide .splide__arrow {
+	.splide .splide__arrow {
 		width: 50px;
 		height: 50px;
 	}
-	.about-third .about-third-text .splide .splide__arrow--prev {
+	.splide .splide__arrow--prev {
 		left: -6em;
 	}
-	.about-third .about-third-text .splide .splide__arrow--next {
+	.splide .splide__arrow--next {
 		right: -6em;
 	}
 	/*Carousel*/
@@ -3599,8 +3601,7 @@ header .menu-icon .section-title {
 
 	/*Team section*/
 	.team .team-text{
-		padding: 15rem 2rem;
-		padding-bottom: 8rem;
+		padding: 0 2rem;
 	}
 	.team .team-text h1{
 		font-size: 38px;
