--- a/css/styles.css
+++ b/css/styles.css
@@ -1709,10 +1709,11 @@ header .menu-icon .section-title {
 .work .work-text{
 	width: 100%;
 	height: 100%;
-    padding: 0 30rem;
+    padding: 0 20rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
+	align-items: center;
     text-align: center;
 	row-gap: 2rem;
 }
@@ -1974,10 +1975,11 @@ header .menu-icon .section-title {
 .blog .blog-text{
 	width: 100%;
     height: 100%;
-    padding: 0 30rem;
+    padding: 0 20rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
+	align-items: center;
     text-align: center;
 	row-gap: 2rem;
 	color: #fff;
@@ -3349,8 +3351,7 @@ header .menu-icon .section-title {
 	}		
 	/*WORK*/
 	.work .work-text{
-		padding: 15rem 2rem;
-		padding-bottom: 4rem;
+		padding: 0 2rem;
 	}
 	.work .work-text h1{
 		font-size: 38px;
