--- a/css/styles.css
+++ b/css/styles.css
@@ -1759,6 +1759,17 @@ header .menu-icon .section-title {
 	color: #FFD601;
 }
 
+.work .work-text .splide .work-pic{
+	overflow: hidden;
+}
+.work .work-text .splide .work-pic img{
+	transition: .5s ease;
+}
+.work .work-text .splide .splide__slide:hover .work-pic img{
+	transform: scale(1.3);
+	filter: blur(5px);
+}
+
 /*Carousel Slider 3D*/
 .work .gallery {
 	width: 100%;
@@ -2020,6 +2031,58 @@ header .menu-icon .section-title {
 	text-decoration: none;
 }
 
+.blog .blog-text .splide .blog-pic {
+	position: relative;
+	overflow: hidden;
+}
+.blog .blog-text .splide .blog-pic .blog-more{
+	position: absolute;
+	bottom: 0;
+	width: 100%;
+	padding: 2rem;
+}
+.blog .blog-text .splide .blog-pic .blog-more h5{
+	font-size: 32px;
+	font-style: normal;
+	font-weight: 400;
+	line-height: normal;
+	text-align: left;
+	text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 4px 4px rgba(0, 0, 0, 0.25);
+	color: #fff;
+	max-width: 60%;
+}
+.blog .blog-text .splide .blog-pic::before {
+	content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(7, 24, 74, 0.3);	
+}
+.blog .blog-text .splide .blog-pic .read-more {
+	display: flex;
+	justify-content: space-between;
+	padding: 2rem 0;
+	opacity: 0;
+	transition: .5s ease;
+}
+.blog .blog-text .splide .blog-pic .read-more h6{
+	font-size: 15px;
+	font-style: normal;
+	font-weight: 400;
+	line-height: normal;
+}
+.blog .blog-text .splide .splide__slide:hover .read-more{
+	opacity: 1;
+}
+.blog .blog-text .splide .blog-pic img{
+	transition: .5s ease;
+}
+.blog .blog-text .splide .splide__slide:hover .blog-pic img{
+	transform: scale(1.2);
+	filter: blur(8px);
+}
 /*Gallery*/
 .blog .gallerry-wrapper {
 	display: flex;
