--- a/css/styles.css
+++ b/css/styles.css
@@ -1582,6 +1582,9 @@ header .menu-icon .section-title {
 	text-transform: inherit;
 	color: #fff;
 }
+.team .team-text .splide__slide img {
+	border-radius: 25px;
+}
 
 /*Carousel Slider 3D*/
 .team .gallery-team {
@@ -1768,6 +1771,9 @@ header .menu-icon .section-title {
 .work .work-text .splide .splide__slide:hover .work-pic img{
 	transform: scale(1.3);
 	filter: blur(5px);
+}
+.work .work-text .splide__slide img {
+	border-radius: 25px;
 }
 
 /*Carousel Slider 3D*/
@@ -2082,6 +2088,9 @@ header .menu-icon .section-title {
 .blog .blog-text .splide .splide__slide:hover .blog-pic img{
 	transform: scale(1.2);
 	filter: blur(8px);
+}
+.blog .blog-text .splide__slide img {
+	border-radius: 25px;
 }
 /*Gallery*/
 .blog .gallerry-wrapper {
@@ -3655,6 +3664,24 @@ header .menu-icon .section-title {
 		line-height: 14px;
 		font-size: 12px;
 		padding: 1rem 0.25rem;
+	}
+
+	.blog .blog-text .splide .blog-pic .blog-more {
+		padding: 0.5rem;
+	}
+	.blog .blog-text .splide .blog-pic .blog-more h5 {
+		max-width: 100%;
+		font-size: 18px;
+		line-height: normal;
+	}
+	.blog .blog-text .splide .blog-pic .read-more {
+		padding: 0.5rem 0;
+	}
+	.blog .blog-text  .splide .splide__arrow {
+		padding: 1rem;
+	}
+	.blog .blog-text .splide .blog-pic .read-more h6 {
+		font-size: 14px;
 	}
 	
 	/*Gallery*/
