--- a/css/styles.css
+++ b/css/styles.css
@@ -1027,8 +1027,8 @@ header .menu-icon .section-title {
 
 .about-second .about-second-text .text-wrapper {
 	display: flex;
-	padding-top: 5rem;
-    text-align: left;
+    padding: 5rem 25rem 0;
+    text-align: center;
     column-gap: 2rem;
 }
 .about-second .about-second-text .text-wrapper .text-content {
@@ -1395,8 +1395,8 @@ header .menu-icon .section-title {
 }
 .services .services-text .text-wrapper {
 	display: flex;
-	padding-top: 5rem;
-    text-align: left;
+    padding: 2rem 25rem 0;
+    text-align: center;
     column-gap: 2rem;
 }
 .services .services-text .text-wrapper .text-content {
@@ -3390,7 +3390,7 @@ header .menu-icon .section-title {
 		overflow: scroll;
 		flex-direction: column;
 		padding: 2rem;
-		margin: 0 4rem;
+		margin: 0 2rem;
 	}
 	.about-second .about-second-more {
 		margin-top: 2rem;
