--- a/css/styles.css
+++ b/css/styles.css
@@ -1546,7 +1546,6 @@ header .menu-icon .section-title {
     position: relative;
     justify-content: center;
     align-items: start;
-	border: 1px solid #000;
     border-radius: 50%;
 	background: #fff;
 	width: 150px;
@@ -1679,10 +1678,6 @@ header .menu-icon .section-title {
 .team .team-text .splide .team2-pic {
 	border-radius: 25px;
 	overflow: hidden;
-}
-.team .team-text .splide .splide__slide:hover .team2-pic img{
-	transform: scale(1.2);
-	filter: blur(5px);
 }
 
 /*Carousel Slider 3D*/
@@ -2147,6 +2142,7 @@ header .menu-icon .section-title {
 	bottom: 0;
 	width: 100%;
 	padding: 2rem;
+	z-index: 2;
 }
 .blog .blog-text .splide .blog-pic .blog-more h5{
 	font-size: 32px;
@@ -2165,7 +2161,8 @@ header .menu-icon .section-title {
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(7, 24, 74, 0.3);	
+    background: rgba(7, 24, 74, 0.4);	
+	z-index: 1;
 }
 .blog .blog-text .splide .blog-pic .read-more {
 	display: flex;
