--- a/css/styles.css
+++ b/css/styles.css
@@ -1870,7 +1870,105 @@ header .menu-icon .section-title {
 .work .work-text .splide__slide img {
 	border-radius: 25px;
 }
+/*Modal project dialog*/
+/* Styles for the modal */
+.modalProject {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7);
+	z-index: 10;
+	opacity: 0;
+	transition: opacity 1s ease-in-out;
+	display: none;
+}
+.modalProject.show {
+	display: block;
+    opacity: 1;
+    pointer-events: auto; /* Enable interaction when visible */
+}
+.modalProject .modal-content-project {
+    margin: auto;
+    display: block;
+    max-width: 100%;
+    max-height: 100%;
+    height: 100100%;
+    width: 100%;
+    object-fit: cover;
+	filter: blur(5px);
+}
+.modalProject::before {
+	content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(7, 24, 74, 0.3);	
+	z-index: 1;
+}
 
+.modalProject .close-project {
+    position: absolute;
+    top: 15px;
+    right: 20px;
+    width: 60px;
+    height: 60px;
+    background-color: rgb(0,0,0,0.2);
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+	font-size: 30px;
+    font-weight: bold;
+    color: #fff;
+	z-index: 99;
+}
+.modalProject .modal-project-text{
+	width: 100%;
+    height: 100%;
+    position: absolute;
+    z-index: 10;
+    top: 0;
+    left: 0;
+    display: flex;
+    flex-direction: column;
+    row-gap: 2rem;
+    justify-content: center;
+    align-items: center;
+    padding: 0 10rem;
+}
+.modalProject .modal-project-text h1{
+	color: #FFF;
+    text-align: center;
+    font-family: Roboto;
+    font-size: 62px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
+.modalProject .modal-project-text h4{
+	color: #FFF;
+    text-align: center;
+    font-family: Roboto;
+    font-size: 32px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+.modalProject .modal-project-text p{
+	color: #FFF;
+    text-align: center;
+    font-family: Roboto;
+    font-size: 32px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    max-width: 60%;
+}
 /*Carousel Slider 3D*/
 .work .gallery {
 	width: 100%;
@@ -3212,6 +3310,9 @@ header .menu-icon .section-title {
 		height: 50px;
 		padding: 1rem;
 	}
+	.modalProject .modal-project-text p {
+		max-width: 100%;
+	}
 	/*BLOG*/
 	.blog .blog-text {
 		padding: 0 5rem;
@@ -3703,6 +3804,16 @@ header .menu-icon .section-title {
 	.work .work-text .splide .splide__arrow {
 		padding: 0rem;
 		border: none;
+	}
+	.modalProject .modal-project-text {
+		padding: 0 2rem;
+	}
+	.modalProject .modal-project-text h1 {
+		font-size: 40px;
+	}
+	.modalProject .modal-project-text p {
+		font-size: 24px;
+		max-width: 100%;
 	}
 	
 	/*Carousel Slider 3D*/	  
