--- a/css/styles.css
+++ b/css/styles.css
@@ -418,8 +418,7 @@ textarea::placeholder {
     left: 0;
     width: 100%;
     height: 100%;
-    object-fit: cover;
-	filter: blur(5px);
+    object-fit: cover;	
 }  
 /* ********************************** */
 /*               HEADER               */
@@ -1898,7 +1897,6 @@ header .menu-icon .section-title {
 }
 .work .work-text .splide .splide__slide:hover .work-pic img{
 	transform: scale(1.3);
-	filter: blur(5px);
 }
 .work .work-text .splide__slide img {
 	border-radius: 25px;
@@ -1931,7 +1929,7 @@ header .menu-icon .section-title {
     width: 100%;
     object-fit: cover;
 }
-.modalProject::before {
+.modalActive::before {
 	content: "";
     position: absolute;
     top: 0;
