--- a/css/styles.css
+++ b/css/styles.css
@@ -21,6 +21,17 @@ a[href^=tel] {
 /* ********************************** */
 /*             UTILITIES              */
 /* ********************************** */
+.scope {
+	z-index: 1;
+	width: 200px;
+	height: 200px;
+	border-radius: 50%;
+	position: absolute;
+	margin: -100px 0px 0px -100px;
+	pointer-events: none !important;
+	background: url('../images/slogan.png') 50% 50% no-repeat fixed;
+}
+
 .fp-viewing-services canvas {
 	position: fixed;
 	top: 0;
@@ -418,12 +429,6 @@ header .logo .white{
 header .logo .black{
 	display: none;
 }
-
-header .logo svg{
-	width: 140px;
-	height:  auto;
-}
-
 header .menu-icon svg{
 	width: 35px;
 	height:  auto;
@@ -1881,6 +1886,184 @@ header .menu-icon .section-title {
 	display: block;
 }
 /* ********************************** */
+/*             BLOG CONTENT PAGE      */
+/* ********************************** */
+.blog-post-cover {
+    height: 100vh;
+	overflow: hidden;
+}
+.blog-post-cover::before {
+	content: "";
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0, 0, 0, 0.3); /* Adjust the alpha value for darkness */
+	z-index: 0;
+}
+.blog-post-cover .blog-post-cover-text{
+	width: 100%;
+    height: 100%;
+    padding: 0 20rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+	align-items: center;
+    text-align: center;
+	row-gap: 2rem;
+	position: relative;
+	color: #fff;
+}
+.blog-post-cover .blog-post-cover-text h1{
+	font-weight: 800;
+	font-size: 80px;
+	line-height: 82px;
+}
+.blog-post-cover .blog-post-cover-text .blog-post-atr{
+	display: flex;
+	justify-content: center;
+	column-gap: 5rem;
+}
+.blog-post-cover .blog-post-cover-text p{
+	font-weight: 400;
+	font-size: 32px;
+	line-height: 37px;
+	text-transform: inherit;
+}
+
+.blog-post-cover .blog-post-cover-text .blog-post-cover-more{
+	display: flex;
+    justify-content: center;
+	padding: 4rem 0;
+}
+
+.blog-post-background {
+	position: absolute;
+    right: 0;
+    bottom: 0;
+    z-index: -1;
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+	filter: blur(10px);
+}
+/* ********************************** */
+/*             BLOG CONTENT PAGE      */
+/* ********************************** */
+.blog-post-content {
+    height: 100vh;
+	overflow: hidden;
+}
+.blog-post-content .blog-post-content-text{
+	width: 100%;
+    height: 100%;
+    padding: 0 10rem;
+    display: flex;
+    justify-content: center;
+	align-items: flex-start;
+	text-align: left;
+	column-gap: 2rem;
+	position: relative;
+	color: #000;
+}
+.blog-post-content .blog-post-content-text h1{
+	font-weight: 800;
+	font-size: 80px;
+	line-height: 82px;
+}
+.blog-post-content .blog-post-content-text h2{
+	font-size: 48px;
+	font-style: normal;
+	font-weight: 400;
+}
+.blog-post-content .blog-post-content-text p{
+	font-weight: 400;
+	font-size: 32px;
+	line-height: 37px;
+	text-transform: inherit;
+}
+.blog-post-content .blog-post-content-text .text-wrapper {
+	display: flex;
+    width: 75%;
+	border-right: 1px solid;
+	padding: 0 4rem;
+}
+.blog-post-content .blog-post-content-text .blog-post-content-latest {
+	display: flex;
+    width: 25%;
+	flex-direction: column;
+    row-gap: 2rem;
+}
+.blog-post-content .blog-post-content-text .text-content {
+	height: 700px;
+    overflow-y: scroll;
+    padding-right: 2rem;
+	overflow-x: auto;
+	max-height: 700px;
+}
+
+.blog-post-content .blog-post-content-text .blog-pic {
+	position: relative;
+	overflow: hidden;
+	border-radius: 15px;
+}
+.blog-post-content .blog-post-content-text .blog-pic .blog-more{
+	position: absolute;
+	bottom: 0;
+	width: 100%;
+	padding: 1rem;
+	z-index: 2;
+}
+.blog-post-content .blog-post-content-text .blog-pic .blog-more h5{
+	font-size: 32px;
+	font-style: normal;
+	font-weight: 400;
+	line-height: normal;
+	text-align: left;
+	text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 4px 4px rgba(0, 0, 0, 0.25);
+	color: #fff;
+	max-width: 100%;
+}
+.blog-post-content .blog-post-content-text .blog-pic::before {
+	content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(7, 24, 74, 0.4);	
+	z-index: 1;
+}
+.blog-post-content .blog-post-content-text .blog-pic .read-more {
+	display: flex;
+	justify-content: space-between;
+	padding: 1rem 0;
+	opacity: 0;
+	transition: .5s ease;
+	color: #fff;
+}
+.blog-post-content .blog-post-content-text .blog-pic .read-more h6{
+	font-size: 15px;
+	font-style: normal;
+	font-weight: 400;
+	line-height: normal;
+}
+.blog-post-content .blog-post-content-text .blog-pic:hover .read-more{
+	opacity: 1;
+}
+.blog-post-content .blog-post-content-text .blog-pic img{
+	transition: .5s ease;
+}
+.blog-post-content .blog-post-content-text .blog-pic:hover img{
+	transform: scale(1.1);
+	filter: blur(8px);
+}
+.blog-post-content .blog-post-content-text .blog-pic img {
+	border-radius: 15px;
+}
+
+/* ********************************** */
 /*       MEDIA QUERIES -- 1440px       */
 /* ********************************** */
 @media (max-width: 1440px) {
@@ -2290,6 +2473,40 @@ header .menu-icon .section-title {
 	.footer .mouse img{
 		width: 60px;
 	}
+	/*BLOG POST COVER*/
+	.blog-post-cover .blog-post-cover-text h1{
+		font-size: 40px;
+		line-height: 50px;
+	}
+	.blog-post-cover .blog-post-cover-text p{
+		font-size: 18px;
+		line-height: 30px;
+	}
+	.blog-post-cover .blog-post-cover-text .blog-post-cover-more {
+		padding: 1rem;
+	}
+	/*BLOG POST CONTENT*/
+	.blog-post-content .blog-post-content-text h1{
+		font-size: 32px;
+    	line-height: 42px;
+	}
+	.blog-post-content .blog-post-content-text h2{
+		font-size: 28px;
+    	line-height: normal;
+	}
+	.blog-post-content .blog-post-content-text p{
+		font-size: 18px;
+		line-height: normal;
+	}
+	.blog-post-content .blog-post-content-text .text-content {
+		height: 400px;
+	}
+	.blog-post-content .blog-post-content-text .blog-pic .blog-more h5 {
+		font-size: 18px;
+	}
+	.blog-post-content .blog-post-content-text .blog-pic .read-more h6 {
+		font-size: 14px;
+	}
 }
 /* ********************************** */
 /*   MEDIA QUERIES -- 500px - 1200px  */
@@ -2443,6 +2660,15 @@ header .menu-icon .section-title {
 	}
 	.footer-fake .footer-fake-text .arrow-up a {
 		padding: 2rem 3.25rem;
+	}
+	/*BLOG POST COVER*/
+	.blog-post-cover .blog-post-cover-text {
+		padding: 0 5rem;
+	}
+	.blog-post-cover .blog-post-cover-text p {
+		font-size: 24px;
+    	line-height: normal;
+		padding: 2rem 5rem;
 	}
 }
 /* ********************************** */
@@ -3106,4 +3332,53 @@ header .menu-icon .section-title {
 	.team .team-text .splide .splide__arrow--next {
 		right: -10px;
 	}	
+	/*BLOG POST COVER*/
+	.blog-post-cover {
+		margin-bottom: 0;
+	}
+	.blog-post-cover .blog-post-cover-text{
+		padding: 0 2rem;
+		row-gap: 2rem;
+	}
+	.blog-post-cover .blog-post-cover-text h1{
+		font-size: 32px;
+    	line-height: 42px;
+	}
+	.blog-post-cover .blog-post-cover-text p{
+		font-size: 24px;
+		line-height: normal;
+	}
+	.blog-post-cover .blog-post-cover-text .blog-post-atr {
+		column-gap: 2rem;
+	}
+	/*BLOG POST CONTENT*/
+	.blog-post-content .blog-post-content-text{
+		padding: 0 2rem;
+		display: flex;
+		align-items: center;
+		flex-direction: column;
+	}
+	.blog-post-content .blog-post-content-text h1{
+		font-size: 32px;
+    	line-height: 42px;
+	}
+	.blog-post-content .blog-post-content-text h2{
+		font-size: 28px;
+    	line-height: normal;
+	}
+	.blog-post-content .blog-post-content-text p{
+		font-size: 24px;
+		line-height: normal;
+	}
+	.blog-post-content .blog-post-content-text .text-wrapper {
+		width: 100%;
+		border-right: none;
+		padding: 0 2rem;
+	}
+	.blog-post-content .blog-post-content-text .blog-post-content-latest {
+		display: none;
+	}
+	.blog-post-content .blog-post-content-text .text-content {
+		height: 500px;
+	}
 }
